--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "angular-file-saver": "^1.1.3",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
