--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angular": "^1.7.8",
     "angular-file-saver": "^1.1.3",
     "angular-fusioncharts": "^3.0.3",
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
-    "fusioncharts": "^3.14.0-sr.1",
+    "fusioncharts": "^3.14.1",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
     "rxjs": "~6.3.3",
