--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fusioncharts": "^3.14.1",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
+    "ngx-bar-rating": "^1.1.0",
     "ngx-spinner": "^7.2.0",
     "node-sass": "^4.13.0",
     "rxjs": "~6.3.3",
