--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@angular/service-worker": "^7.2.15",
     "@auth0/angular-jwt": "^3.0.1",
     "angular": "^1.7.8",
     "angular-file-saver": "^1.1.3",
     "angular-fusioncharts": "^3.0.3",
+    "aos": "^2.3.4",
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
