--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,10 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/animate.css/animate.css"
             ],
-            "scripts": [],
+            "scripts": ["./node_modules/wow.js/dist/wow.js"],
             "es5BrowserSupport": true
           },
           "configurations": {
