--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "ng2-charts": "^2.3.0",
     "ngx-bar-rating": "^1.1.0",
     "ngx-spinner": "^7.2.0",
+    "ngx-wow": "^2.0.1",
     "node-sass": "^4.13.0",
     "rxjs": "~6.3.3",
     "true-case-path": "^2.2.1",
     "tslib": "^1.9.0",
     "web-push": "^3.4.3",
+    "wow.js": "^1.2.2",
+    "wowjs": "^1.1.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
